--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ xlrd==2.0.1
 scipy==1.10.1
 shiny==0.6.0
 shinyswatch==0.4.1
-uvicorn==0.24.0 
+uvicorn==0.24.0
+requests==2.32.3
+beautifulsoup4==4.13.4 
