--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ shiny==0.6.0
 shinyswatch==0.4.1
 uvicorn==0.24.0
 requests==2.32.3
-beautifulsoup4==4.13.4 
+beautifulsoup4==4.13.4
+python-docx==1.1.2 
